# nomos-testing

./: .cargo-deny.toml  .dockerignore  .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  typos.toml  versions.env
.github/workflows/: build-binaries.yml  compose-mixed.yml  deploy-pages.yml  lint.yml
book/: book.toml
book/src/: annotated-tree.md  architecture-overview.md  chaos.md  dsl-cheat-sheet.md  examples-advanced.md  examples.md  internal-crate-reference.md  operations.md  quickstart.md  testing-philosophy.md  troubleshooting.md
docs/: 404.html  annotated-tree.html  architecture-overview.html  authoring-scenarios.html  best-practices.html  chaos.html  custom-workload-example.html  design-rationale.html  dsl-cheat-sheet.html  examples-advanced.html  examples.html  extending.html  faq.html  glossary.html  index.html  internal-crate-reference.html  introduction.html  node-control.html  operations.html  part-i.html  part-ii.html  part-iii.html  part-iv.html  print.html  quickstart.html  runners.html  running-scenarios.html  scenario-builder-ext-patterns.html  scenario-lifecycle.html  scenario-model.html  searcher-c2a407aa.js  searchindex-0205dc69.js  searchindex-08163dcf.js  searchindex-08c6dee7.js  searchindex-0ac38380.js  searchindex-0d677b5d.js  searchindex-17b833a3.js  searchindex-1ce8744d.js  searchindex-1d9a631c.js  searchindex-1f5b58f2.js  (+71 more)
docs/theme/: highlight-atom-one-dark-71d5a95c.css  highlight-github-6d8684ff.css  highlight-github-ab20f7fd.css  highlight-init-34b37f60.js  highlight-init-7cc38499.js  highlight-monokai-cd108744.css  mermaid-6b69a25d.css  mermaid-init-347bf117.js  mermaid-init-c4c36ca2.js  mermaid-overlay-77a7ae18.js
examples/tests/: local_runner_bin_smoke.rs
scripts/: build-bundle.sh  build-linux-binaries.sh  build-rapidsnark.sh  query-prom-metrics.sh  run-demo.sh  run-examples.sh  setup-circuits-stack.sh  setup-nomos-circuits.sh  update-nomos-rev.sh
testing-framework/assets/stack/: Dockerfile  cfgsync.yaml
testing-framework/assets/stack/monitoring/grafana/dashboards/: api-dashboard.json  api-detailed-dashboard.json  blend-dashboard.json  consensus-dashboard.json  da-dashboard.json  issues-diagnostics-dashboard.json  mempool-dashboard.json  overview-dashboard.json  services-dashboard.json  storage-dashboard.json  storage-detailed-dashboard.json
testing-framework/assets/stack/scripts/: build_test_image.sh  run_nomos_executor.sh  run_nomos_node.sh
testing-framework/configs/: Cargo.toml
testing-framework/configs/src/common/: kms.rs
testing-framework/configs/src/nodes/: blend.rs  common.rs  executor.rs  validator.rs
testing-framework/configs/src/topology/configs/: blend.rs  consensus.rs  da.rs  mod.rs  network.rs  wallet.rs
testing-framework/core/: Cargo.toml
testing-framework/core/src/: constants.rs
testing-framework/core/src/nodes/: api_client.rs  executor.rs  mod.rs  validator.rs
testing-framework/core/src/nodes/common/: mod.rs  node.rs
testing-framework/core/src/nodes/common/config/: injection.rs
testing-framework/core/src/nodes/common/lifecycle/: spawn.rs
testing-framework/core/src/scenario/: cfgsync.rs
testing-framework/core/src/scenario/runtime/: block_feed.rs
testing-framework/core/src/topology/: config.rs  deployment.rs  generation.rs  mod.rs  utils.rs
testing-framework/core/src/topology/readiness/: balancer.rs  membership.rs  mod.rs  network.rs
testing-framework/runners/compose/assets/: docker-compose.yml.tera
testing-framework/runners/compose/src/: cleanup.rs  commands.rs  compose.rs  deployer.rs  docker.rs  environment.rs  errors.rs  lib.rs  platform.rs  ports.rs  readiness.rs  runner.rs
testing-framework/runners/compose/src/deployer/: clients.rs  mod.rs  orchestrator.rs  ports.rs  readiness.rs  setup.rs
testing-framework/runners/compose/src/descriptor/: mod.rs  node.rs
testing-framework/runners/compose/src/docker/: commands.rs  control.rs  mod.rs  platform.rs  workspace.rs
testing-framework/runners/compose/src/infrastructure/: cfgsync.rs  environment.rs  mod.rs  ports.rs  template.rs
testing-framework/runners/compose/src/lifecycle/: block_feed.rs  cleanup.rs  mod.rs  readiness.rs  wait.rs
testing-framework/runners/docker/: .dockerignore  runner.Dockerfile
testing-framework/runners/k8s/helm/nomos-runner/: values.yaml
testing-framework/runners/k8s/helm/nomos-runner/templates/: _helpers.tpl  cfgsync-deployment.yaml  cfgsync-service.yaml  grafana-configmap.yaml  grafana-deployment.yaml  grafana-service.yaml
testing-framework/runners/k8s/src/: assets.rs
testing-framework/runners/k8s/src/deployer/: mod.rs  orchestrator.rs
testing-framework/runners/k8s/src/infrastructure/: assets.rs
testing-framework/runners/k8s/src/wait/: mod.rs
testing-framework/runners/local/src/: runner.rs
testing-framework/tools/cfgsync/: Cargo.toml
testing-framework/tools/cfgsync/src/: config.rs  lib.rs  repo.rs  server.rs
testing-framework/tools/cfgsync/src/config/: builder.rs  kms.rs  providers.rs
testing-framework/workflows/: Cargo.toml
testing-framework/workflows/src/builder/: mod.rs
testing-framework/workflows/src/expectations/: consensus_liveness.rs
testing-framework/workflows/src/util/: tx.rs
testing-framework/workflows/src/workloads/: chaos.rs  util.rs
testing-framework/workflows/src/workloads/da/: expectation.rs  workload.rs
testing-framework/workflows/src/workloads/transaction/: expectation.rs  workload.rs
testnet/: Dockerfile
testnet/cfgsync/: Cargo.toml
testnet/cfgsync/src/: client.rs  config.rs  repo.rs  server.rs
testnet/scripts/: run_nomos_executor.sh  run_nomos_node.sh
tests/workflows/tests/: compose_runner.rs  k8s_runner.rs  local_runner.rs
