[package]
categories.workspace  = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
name                  = "testing-framework-workflows"
readme.workspace      = true
repository.workspace  = true
version               = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait                     = "0.1"
chain-service                   = { workspace = true }
ed25519-dalek                   = { version = "2.2.0", features = ["rand_core", "serde"] }
executor-http-client            = { workspace = true }
key-management-system-service   = { workspace = true }
nomos-core                      = { workspace = true }
rand                            = { workspace = true }
testing-framework-config        = { workspace = true }
testing-framework-core          = { workspace = true }
thiserror                       = { workspace = true }
futures                         = "0.3"
tokio                           = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tracing                         = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["chain-service"]
